--- a/app/src/main/res/layout/fragment_nested_home.xml
+++ b/app/src/main/res/layout/fragment_nested_home.xml
@@ -4,8 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="?attr/actionBarSize">
 
+
+    <!-- Weekly Streak -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,6 +30,62 @@
             android:id="@+id/weekly_streak_des_txt"
             android:text="@string/weekly_streak_description"
             android:paddingLeft="10dp"/>
+
+        <!-- Fire Images -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp">
+
+            <!-- Weekly Fire Images -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center">
+
+                <LinearLayout
+                    android:id="@+id/weekly_fire_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/weekly_fire_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp"
+                    android:layout_gravity="center"/>
+
+            </LinearLayout>
+            <!--Daily Fire Images -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="20dp"
+                android:paddingTop="5dp"
+                android:layout_gravity="center">
+
+                <LinearLayout
+                    android:id="@+id/daily_fire_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/daily_fire_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:layout_gravity="center" />
+            </LinearLayout>
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,9 +157,8 @@
             android:layout_width="match_parent"
             android:layout_height="240dp"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp" />
-
-
+            android:paddingRight="20dp"
+            />
 
     </LinearLayout>
 </ScrollView>
