--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="blue">#267EE8</color>
     <color name="dark_gray">#121212</color>
     <color name="gray">#B0B0B0</color>
+    <color name="transparent">#00000000</color>
+
 
 
 
