updated the original code to enable passing the name and category of an exercise selected in the ExercisesFragment to the EmptyWorkoutFragment using a Bundle. Modified the ExercisesAdapter click listener to navigate to EmptyWorkoutFragment with the selected exercise's data. In EmptyWorkoutFragment, retrieved the passed data from the arguments and displayed it using a TextView in the layout. Data sharing between fragments while maintaining the existing navigation structure and user flow.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -56,4 +56,9 @@
             app:destination="@id/exercisesFragment" />
     </fragment>
 
+    <action
+        android:id="@+id/action_exercisesFragment_to_emptyWorkoutFragment"
+        app:destination="@id/emptyWorkoutFragment" />
+
+
 </navigation>
