--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="dark_gray">#121212</color>
     <color name="gray">#B0B0B0</color>
     <color name="transparent">#00000000</color>
+    <color name="red">#FF0000</color>
 
 
 
