--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -55,6 +55,9 @@
         <argument
             android:name="exerciseName"
             app:argType="string" />
+        <argument
+            android:name="exerciseTypeId"
+            app:argType="long" />
         <action
             android:id="@+id/action_logExerciseFragment_to_exercisesFragment"
             app:destination="@id/exercisesFragment" />
