--- a/app/src/main/res/layout/comment_listadapter.xml
+++ b/app/src/main/res/layout/comment_listadapter.xml
@@ -20,24 +20,13 @@
         android:layout_weight="1">
 
         <TextView
-            android:id="@+id/comment_name_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"/>
-
-        <TextView
             android:id="@+id/comment_txt"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:paddingRight="10dp"
+            android:paddingRight="12dp"
+            android:paddingTop="12dp"
             android:textColor="#FFFFFF"/>
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/comment_recency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
 
 </LinearLayout>
