--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -102,6 +102,7 @@
                     android:paddingTop="4dp">
 
                     <TextView
+                        android:id="@+id/workout_counts_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Workouts: 39"
@@ -109,6 +110,7 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/follower_counts_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Followers: 0"
@@ -117,6 +119,7 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/following_counts_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Following: 0"
