--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -42,6 +42,11 @@
         android:name="com.example.fit_connect.ui.exercises.ExercisesFragment"
         android:label="Exercises"
         tools:layout="@layout/fragment_exercises">
+        <argument
+            android:name="routineType"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
         <action
             android:id="@+id/action_exercisesFragment_to_logExerciseFragment"
             app:destination="@id/logExerciseFragment" />
