--- a/app/src/main/res/layout/empty_workout_page.xml
+++ b/app/src/main/res/layout/empty_workout_page.xml
@@ -108,7 +108,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/statsLayout"
                 tools:itemCount="3"
-                tools:listitem="@layout/item_exercise" />
+                tools:listitem="@layout/item_exercise_show" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/addExerciseButton"
